# karenine

./: .gitignore  .qmllint.ini  .qmlls.ini  AIPanel.qml  BottomBar.qml  ChromaGraph.qml  ClaudeChat.qml  HardwareStats.qml  Metronome.qml  MiniGraph.qml  MusicPlayerWidget.qml  NotesWidget.qml  OllamaChat.qml  OllamaTools.qml  QuickControls.qml  README.md  RightPanel.qml  Settings.qml  SettingsWindow.qml  SidePanel.qml  Tuner.qml  chroma-analyzer.py  flake.nix  lock.qml  mic-transcribe.sh  qmldir  shell.qml  sonar-project.properties  tuner.py
.github/workflows/: build-anna.yml  ci.yml  codeql.yml  deploy-docs.yml  semgrep.yml  (+1 more)
ai/: AIPanel.qml  ClaudeChat.qml  OllamaChat.qml  OllamaTools.qml  qmldir
anna/: Cargo.toml  default.nix
anna/src/: appctl.rs  audio.rs  chroma.rs  client.rs  color.rs  hwstats.rs  main.rs  metronome.rs  msi.rs  protocol.rs  state.rs  templates.rs  tuner.rs
anna/templates/: alacritty-colors.toml.tmpl  gtk4-colors.css.tmpl  hyprland-colors.lua.tmpl  kdeglobals.tmpl  konsole.colorscheme.tmpl  tofi.config.tmpl  vesktop-colors.css.tmpl  zed-theme.json.tmpl
backend/: chroma-analyzer.sh  metronome.sh  mic-level.sh  tuner.sh  voice-assistant.sh
docs/: docs.config.ts  package-lock.json  package.json
lock/: LockClock.qml  LockMusic.qml  LockStats.qml  LockSurface.qml  qmldir
panels/: BottomBar.qml  RightPanel.qml  SettingsWindow.qml  SidePanel.qml  qmldir
services/: Theme.qml
widgets/: ChromaGraph.qml  HardwareStats.qml  Metronome.qml  MiniGraph.qml  MusicPlayerWidget.qml  NotesWidget.qml  QuickControls.qml  Settings.qml  Tuner.qml  qmldir
(+12 files in other folders)
