[package]
name = "anna"
version = "0.1.0"
edition = "2021"
description = "anna — unified engine daemon for the karenine Quickshell interface (accent/palette theming + hardware stats)"

[[bin]]
name = "anna"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
